ensure on mobile templates appear uniformly sized and positioned

--- a/express/blocks/exp-intl-template-x/exp-intl-template-x.css
+++ b/express/blocks/exp-intl-template-x/exp-intl-template-x.css
@@ -186,40 +186,40 @@ main .exp-intl-template-x.horizontal.three-templates .carousel-container .carous
     padding-left: 0;   
 }
 
-main .exp-intl-template-x.horizontal.four-templates .exp-intl-template-x-inner-wrapper .carousel-container .button.carousel-arrow.carousel-arrow-left {
+main .exp-intl-template-x.horizontal .exp-intl-template-x-inner-wrapper .carousel-container .button.carousel-arrow.carousel-arrow-left {
     position: absolute;
     right: 42px;
 }
 
-main .exp-intl-template-x.horizontal.four-templates .carousel-container .carousel-fader-left {
+main .exp-intl-template-x.horizontal .carousel-container .carousel-fader-left {
     display: contents;
     opacity: 1;
 }
 
-main .exp-intl-template-x.horizontal.four-templates .carousel-container .carousel-fader-left.arrow-hidden a {
+main .exp-intl-template-x.horizontal .carousel-container .carousel-fader-left.arrow-hidden a {
     opacity: 0.5;
 }
 
-main .exp-intl-template-x.horizontal.four-templates .carousel-container .carousel-fader-right {
+main .exp-intl-template-x.horizontal .carousel-container .carousel-fader-right {
     display: contents;
     opacity: 1;
 }
 
-main .exp-intl-template-x.horizontal.four-templates .carousel-container .carousel-fader-right.arrow-hidden a {
+main .exp-intl-template-x.horizontal .carousel-container .carousel-fader-right.arrow-hidden a {
     opacity: 0.5;
 }
 
-main .exp-intl-template-x.horizontal.four-templates  .carousel-container .carousel-platform.left-fader:not(.right-fader) {
+main .exp-intl-template-x.horizontal .carousel-container .carousel-platform.left-fader:not(.right-fader) {
     mask-image: none;
     -webkit-mask-image: none;
 }
 
-main .exp-intl-template-x.horizontal.four-templates .carousel-container .carousel-platform.right-fader:not(.left-fade) {
+main .exp-intl-template-x.horizontal .carousel-container .carousel-platform.right-fader:not(.left-fade) {
     mask-image: none;
     -webkit-mask-image: none;
 }
 
-.exp-intl-template-x.horizontal.four-templates .template:not(.placeholder) img:not(.icon):not(.icon-share-arrow) {
+.exp-intl-template-x.horizontal .template:not(.placeholder) img:not(.icon):not(.icon-share-arrow) {
     width: 216px;
     height: 324px;
 }
